# ze-supply-chain

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md  design.md  docker-compose.yml
crates/: README_crates.md
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/memo-schema/: Cargo.toml
crates/memo-schema/src/: lib.rs
crates/wallet-service/: Cargo.toml
crates/wallet-service/src/: api.rs  block_cache.rs  config.rs  indexer.rs  main.rs  pg.rs  wallet.rs
migrations/: README_migrations.md  schema.sql
scripts/: README_scripts.md  mock-wallet.py  seed-demo.sh
web/: README_web.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  Dashboard.tsx  Home.tsx  RecordDetail.tsx  UnderTheHood.tsx  api.ts  main.tsx  styles.css
