# Gateway Crate Manifest
#
#   Package metadata for the public API gateway binary (Axum + Postgres).
#
# INPUT:
#   - None; Cargo build configuration
#
# OUTPUT:
#   - gateway binary (port 7700 by default)
#
# NOTES:
#   Depends on memo-schema for encode/validate; no Zcash key dependencies.
#
# Written by Composer for Ze Supply Chain. June 2025. All rights reserved.

[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
memo-schema = { path = "../memo-schema" }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
