# Wallet Service Crate Manifest
#
#   Package metadata for the Zcash signer + indexer binary (internal API).
#
# INPUT:
#   - None; Cargo build configuration
#
# OUTPUT:
#   - wallet-service binary (port 7001 by default)
#
# NOTES:
#   Heavy Zcash dependency stack; requires org seed and lightwalletd. Not an
#   open-source candidate without significant abstraction of key management.
#
# Written by Composer for Ze Supply Chain. June 2025. All rights reserved.

[package]
name = "wallet-service"
version.workspace = true
edition.workspace = true

[dependencies]
memo-schema = { path = "../memo-schema" }

zcash_client_backend = { workspace = true }
zcash_client_sqlite = { workspace = true }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }
zcash_keys = { workspace = true }
zcash_address = { workspace = true }
zcash_proofs = { workspace = true }
zip32 = { workspace = true }
zip321 = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
rusqlite = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
secrecy = { workspace = true }
nonempty = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
bip39 = { workspace = true }
rand = { workspace = true }
